@@ -1,18 +1,18 @@
 package com.leanstacks.ws.web.api;
 
-import static org.mockito.Matchers.any;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Collection;
+import java.util.List;
+import java.util.Optional;
 
 import org.junit.Assert;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
@@ -24,6 +24,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.base.Strings;
 import com.leanstacks.ws.AbstractTest;
+import com.leanstacks.ws.RestControllerTest;
 import com.leanstacks.ws.model.Greeting;
 import com.leanstacks.ws.service.EmailService;
 import com.leanstacks.ws.service.GreetingService;
@@ -41,7 +42,8 @@ import com.leanstacks.ws.service.GreetingService;
  * @author Matt Warman
  */
 @RunWith(SpringRunner.class)
-@WebMvcTest(GreetingController.class)
+@RestControllerTest
+@WithMockUser
 public class GreetingControllerTest extends AbstractTest {
 
     /**
@@ -91,12 +93,16 @@ public class GreetingControllerTest extends AbstractTest {
         // perform test clean up
     }
 
+    /**
+     * Test fetch collection of Greetings.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testGetGreetings() throws Exception {
 
         // Create some test data
-        final Collection<Greeting> list = getEntityListStubData();
+        final List<Greeting> list = getEntityListStubData();
 
         // Stub the GreetingService.findAll method return value
         when(greetingService.findAll()).thenReturn(list);
@@ -118,16 +124,20 @@ public class GreetingControllerTest extends AbstractTest {
 
     }
 
+    /**
+     * Test fetch a Greeting by identifier.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testGetGreeting() throws Exception {
 
         // Create some test data
-        final Long id = new Long(1);
-        final Greeting entity = getEntityStubData();
+        final Long id = Long.valueOf(1);
+        final Optional<Greeting> greetingOptional = Optional.of(getEntityStubData());
 
         // Stub the GreetingService.findOne method return value
-        when(greetingService.findOne(id)).thenReturn(entity);
+        when(greetingService.findOne(id)).thenReturn(greetingOptional);
 
         // Perform the behavior being tested
         final MvcResult result = mvc
@@ -146,15 +156,19 @@ public class GreetingControllerTest extends AbstractTest {
         Assert.assertTrue("failure - expected HTTP response body to have a value", !Strings.isNullOrEmpty(content));
     }
 
+    /**
+     * Test fetch a Greeting with unknown identifier.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testGetGreetingNotFound() throws Exception {
 
         // Create some test data
         final Long id = Long.MAX_VALUE;
 
         // Stub the GreetingService.findOne method return value
-        when(greetingService.findOne(id)).thenReturn(null);
+        when(greetingService.findOne(id)).thenReturn(Optional.empty());
 
         // Perform the behavior being tested
         final MvcResult result = mvc
@@ -170,12 +184,16 @@ public class GreetingControllerTest extends AbstractTest {
 
         // Perform standard JUnit assertions on the test results
         Assert.assertEquals("failure - expected HTTP status 404", 404, status);
-        Assert.assertTrue("failure - expected HTTP response body to be empty", Strings.isNullOrEmpty(content));
+        Assert.assertTrue("failure - expected HTTP response body to have a value", !Strings.isNullOrEmpty(content));
 
     }
 
+    /**
+     * Test create a Greeting.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testCreateGreeting() throws Exception {
 
         // Create some test data
@@ -211,14 +229,18 @@ public class GreetingControllerTest extends AbstractTest {
         Assert.assertEquals("failure - expected text attribute match", entity.getText(), createdEntity.getText());
     }
 
+    /**
+     * Test update a Greeting.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testUpdateGreeting() throws Exception {
 
         // Create some test data
         final Greeting entity = getEntityStubData();
         entity.setText(entity.getText() + " test");
-        final Long id = new Long(1);
+        final Long id = Long.valueOf(1);
 
         // Stub the GreetingService.update method return value
         when(greetingService.update(any(Greeting.class))).thenReturn(entity);
@@ -249,12 +271,16 @@ public class GreetingControllerTest extends AbstractTest {
 
     }
 
+    /**
+     * Test delete a Greeting.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testDeleteGreeting() throws Exception {
 
         // Create some test data
-        final Long id = new Long(1);
+        final Long id = Long.valueOf(1);
 
         // Perform the behavior being tested
         final MvcResult result = mvc.perform(MockMvcRequestBuilders.delete(RESOURCE_ITEM_URI, id)).andReturn();
@@ -272,16 +298,20 @@ public class GreetingControllerTest extends AbstractTest {
 
     }
 
+    /**
+     * Test sending email asynchronously.
+     * 
+     * @throws Exception Thrown if mocking failure occurs.
+     */
     @Test
-    @WithMockUser
     public void testSendGreetingAsync() throws Exception {
 
         // Create some test data
-        final Long id = new Long(1);
-        final Greeting entity = getEntityStubData();
+        final Long id = Long.valueOf(1);
+        final Optional<Greeting> greetingOptional = Optional.of(getEntityStubData());
 
         // Stub the GreetingService.findOne method return value
-        when(greetingService.findOne(id)).thenReturn(entity);
+        when(greetingService.findOne(id)).thenReturn(greetingOptional);
 
         // Perform the behavior being tested
         final MvcResult result = mvc.perform(
@@ -303,8 +333,8 @@ public class GreetingControllerTest extends AbstractTest {
         Assert.assertTrue("failure - expected HTTP response body to have a value", !Strings.isNullOrEmpty(content));
     }
 
-    private Collection<Greeting> getEntityListStubData() {
-        final Collection<Greeting> list = new ArrayList<Greeting>();
+    private List<Greeting> getEntityListStubData() {
+        final List<Greeting> list = new ArrayList<Greeting>();
         list.add(getEntityStubData());
         return list;
     }
